# goit-pythonweb-hw-08

./: main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: d9e08d69ab4a_initial_migration.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py
src/routes/: contacts.py
src/schemas/: contacts.py
src/services/: contacts.py
src/utils/: healthchecker.py
